[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/background_6.png" type="Texture" id=2]
[ext_resource path="res://assets/the_end.png" type="Texture" id=3]
[ext_resource path="res://assets/game_over.png" type="Texture" id=4]
[ext_resource path="res://assets/background_5.png" type="Texture" id=5]
[ext_resource path="res://assets/background_3.png" type="Texture" id=6]
[ext_resource path="res://assets/background_2.png" type="Texture" id=7]
[ext_resource path="res://assets/background_1.png" type="Texture" id=8]
[ext_resource path="res://assets/background_4.png" type="Texture" id=9]

[node name="game" type="Node"]
script = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]
offset = Vector2( 320, 512 )
current = true

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="end_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="end_text" type="Sprite" parent="."]
visible = false
z_index = 50
texture = ExtResource( 3 )

[node name="background" type="Node2D" parent="."]
position = Vector2( 320, 6000 )

[node name="Background1" type="Sprite" parent="background"]
position = Vector2( 0, -5244 )
texture = ExtResource( 8 )

[node name="Background2" type="Sprite" parent="background"]
position = Vector2( 0, -3161 )
texture = ExtResource( 7 )

[node name="Background3" type="Sprite" parent="background"]
position = Vector2( 0, -584 )
texture = ExtResource( 6 )

[node name="Background4" type="Sprite" parent="background"]
position = Vector2( 0, 1782 )
texture = ExtResource( 9 )

[node name="Background5" type="Sprite" parent="background"]
position = Vector2( 0, 3961 )
texture = ExtResource( 5 )

[node name="game_over_text" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Background6" type="Sprite" parent="."]
position = Vector2( 320, 11512 )
texture = ExtResource( 2 )

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_tick"]
[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_tick"]
